cdebconf (0.49) UNRELEASED; urgency=low

  * Christian Perrier 
    - Update French translation.
  * Safir Secerovic, Amila Akagic
    - Add Bosnian translation (bs.po).
  * Alastair McKinstry
    - Change CMDSTATUS_BADPARAM code to 15, to disabiguate.
    - Add enum for command status codes to debconfclient.h
  * Ilgiz Kalmetev
    - Updated Russian translation. Closes: #219095.

 -- Pierre Machard <pmachard@debian.org>  Sat,  1 Nov 2003 11:54:54 +0100

cdebconf (0.48) unstable; urgency=low

  * Denis Barbier
    - Sort translated choices when a select/multiselect template contains
      a line Listorder: lexicographic
      If some Choices items must not be sorted, they can be prepended with
      an exclamation mark.  Adding a comment is a good idea to let
      translators know why this sign has been put here:
        _Choices: ${FOO}, !Other[ You only have to translate Other, remove the exclamation mark and this comment between brackets]
      Currently text, newt, slang and gtk frontends support this feature.
    - Fix a crash with the newt frontend when a boolean question has no
      default value. Closes: #215583.
    - Let cdebconf newt frontend looks like debconf dialog: short description
      is moved just before input field, except for note and error template
      types.  Closes: #215582.
    - Make strlongest aware of wide chars.
    - Windows now adjust to text size with the newt frontend,
  * Steinar H. Gunderson
    - Makes cdebconf assume "show only unseen questions" by default,
      which makes it behave a lot more like debconf. This also makes
      unattended installs (ie. installs with pre-seeded debconf databases)
      possible without a non-interactive frontend.
    - Updated dpkg-reconfigure to make cdebconf show unseen questions,
      to keep it updated with the change above.
  * Kęstutis Biliūnas
    - Add Lithuanian translation (lt.po).
  * Claus Hindsgaul
    - Add Danish translation (da.po).
  * Petter Reinholdtsen