@@ -9,6 +9,9 @@ cdebconf (0.49) UNRELEASED; urgency=low
     - Add enum for command status codes to debconfclient.h
   * Ilgiz Kalmetev
     - Updated Russian translation. Closes: #219095.
+  * Denis Barbier
+    - Empty extended descriptions did produce extra vertical space, it is
+      now fixed for all supported frontends.  Closes: #219072.
 
  -- Pierre Machard <pmachard@debian.org>  Sat,  1 Nov 2003 11:54:54 +0100
 
